<resources>
    <string name="app_name">HealthGO</string>
    <string name="default_value">Null</string>

    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirmed_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="login">Sign in</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="welcome">Welcome,</string>

    <string name="bmi">BMI</string>
    <string name="bmi_desc">* Body Mass Index (BMI) is a person’s weight in kilograms divided by the square of height in meters. A high BMI can indicate high body fatness. BMI screens for weight categories that may lead to health problems, but it does not diagnose the body fatness or health of an individual.</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="default_bmi">0.0</string>
    <string name="save">Save</string>

    <string name="add_new_weight">Update Weight</string>

    <string name="calorie">Daily Diet</string>
    <string name="daily_calorie_target">Daily Target (Cal)</string>
    <string name="calorie_intake_default">0</string>
    <string name="cal_measure">Cal</string>
    <string name="calorie_intake">Intake (Cal)</string>

    <string name="food_calorie">Check Food Calorie</string>
    <string name="search_result">search result display here…</string>

    <string name="trend">TREND</string>
</resources>